--- a/CovidKeeperFrontend/Views/HomeUserControl.xaml
+++ b/CovidKeeperFrontend/Views/HomeUserControl.xaml
@@ -41,30 +41,7 @@
                     </StackPanel>
                 </Grid>
             </Grid>
-            <Grid Grid.Column="1" Margin="0.2,0,0.4,5.8">
-                <Rectangle Height="120" Margin="20" Fill="White" RadiusY="10" RadiusX="10" >
-                    <Rectangle.Effect>
-                        <DropShadowEffect BlurRadius="20" Color="#FFDEDEDE" RenderingBias="Quality" ShadowDepth="1"/>
-                    </Rectangle.Effect>
-                </Rectangle>
-                <Grid Margin="25" Height="120">
-                    <Grid Width="35" Height="50" Background="#FF41A43C" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20 0">
-                        <Grid.Effect>
-                            <DropShadowEffect BlurRadius="20" Color="#FFECECEC" RenderingBias="Quality" ShadowDepth="1"/>
-                        </Grid.Effect>
-                        <materialDesign:PackIcon Kind="Store" HorizontalAlignment="Center" VerticalAlignment="Bottom" Margin="5" Foreground="White" Width="20" Height="20"/>
-                    </Grid>
-                    <TextBlock Text="Receita" HorizontalAlignment="Right" FontFamily="Champagne &amp; Limousines" Margin="5" VerticalAlignment="Top" Foreground="Gray"/>
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10 30">
-                        <TextBlock Text="R$" FontFamily="Champagne &amp; Limousines" Margin="0 2" Foreground="Gray" FontSize="20" VerticalAlignment="Bottom"/>
-                        <TextBlock Text="35.674,00" FontFamily="Champagne &amp; Limousines" VerticalAlignment="Center" Foreground="Gray" FontSize="30"/>
-                    </StackPanel>
-                    <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" Margin="20">
-                        <materialDesign:PackIcon Kind="Calendar" Foreground="Gray" Width="10" Height="10" VerticalAlignment="Center" Margin="5 0"/>
-                        <TextBlock Text="Ultimas 24h" FontSize="8" Foreground="Gray"/>
-                    </StackPanel>
-                </Grid>
-            </Grid>
+            
             <Grid Grid.Column="1" Grid.ColumnSpan="2" Margin="261.2,0,0.2,5.8">
                 <Rectangle Height="120" Margin="20" Fill="White" RadiusY="10" RadiusX="10" >
                     <Rectangle.Effect>
@@ -83,8 +60,7 @@
                                    Foreground="{Binding Path=ForegroundColorPercentageWorkersProperty, Mode=OneWay}" FontSize="40" />
                     </StackPanel>
                     <StackPanel Orientation="Horizontal" VerticalAlignment="Bottom" Margin="20">
-                        <materialDesign:PackIcon Kind="Github" Foreground="Gray" Width="10" Height="10" VerticalAlignment="Center" Margin="5 0"/>
-                        <TextBlock Text="Monitorado pelo GitHub" FontSize="8" Foreground="Gray"/>
+                        <TextBlock Text="Today's change compared to yesterday." FontSize="8" Foreground="Gray"/>
                     </StackPanel>
                 </Grid>
             </Grid>
@@ -118,7 +94,9 @@
                         <Grid.Effect>
                             <DropShadowEffect BlurRadius="20" Color="#FFDEDEDE" ShadowDepth="1"/>
                         </Grid.Effect>
-                        <Button x:Name="ActiveButton" Content="{Binding Path=VM_ActiveButtonContentProperty, Mode=OneWay}" HorizontalAlignment="Center" VerticalAlignment="Center" Width="76" Margin="162,49,162,59" Click="ActiveButton_Click"/>
+                        <Button x:Name="ActiveButton" Content="{Binding Path=VM_ActiveButtonContentProperty, Mode=OneWay}" 
+                                HorizontalAlignment="Center" VerticalAlignment="Center" Width="76" Margin="162,49,162,59" 
+                                Click="ActiveButton_Click" Background="{Binding Path=BackgroundColorActiveButtonProperty, Mode=OneWay}"/>
                     </Grid>                    
                 </Grid>
             </Grid>
