--- a/CovidKeeperFrontend/Views/ManageWorkersUserControl.xaml
+++ b/CovidKeeperFrontend/Views/ManageWorkersUserControl.xaml
@@ -52,13 +52,13 @@
                     </StackPanel>
                 </Grid>
             </materialDesign:DialogHost.DialogContent>
-            <Grid Height="80" VerticalAlignment="Top" HorizontalAlignment="Center">
+            <Grid Height="30" VerticalAlignment="Top" HorizontalAlignment="Center">
                 <StackPanel Orientation="Horizontal" >
                     <Button x:Name="PlusButton" Width="30" Height="30" Padding="0" Foreground="Gray" Background="{x:Null}" BorderBrush="{x:Null}" 
                             Command="{x:Static materialDesign:DialogHost.OpenDialogCommand}" Click="PlusButton_Click">
                         <materialDesign:PackIcon Kind="PlusBold"/>
                     </Button>
-                    <Button x:Name="SearchButton" Width="30" Height="30" Padding="0" 
+                    <Button x:Name="SearchButton" Width="30" Height="30" Padding="0" Click="SearchButton_Click"
                             Background="{x:Null}" BorderBrush="{x:Null}" Foreground="Gray">
                         <materialDesign:PackIcon Kind="Search"/>
                     </Button>
@@ -70,7 +70,7 @@
         <Grid Height="450">
             <Grid.RowDefinitions>
                 <RowDefinition/>
-                <RowDefinition Height="380"/>
+                <RowDefinition Height="415"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*"/>
@@ -81,22 +81,34 @@
             <Grid Grid.Row="1" Grid.ColumnSpan="3">
                 <ScrollViewer Margin="0,0,0,30">
                     <DataGrid x:Name="WorkerDetailsTable" ItemsSource="{Binding Path=VM_WorkerDetailsTableProperty, Mode=OneWay}" 
-                              HorizontalAlignment="Left" AutoGenerateColumns="False" CurrentCellChanged="WorkerDetailsTable_CurrentCellChanged"
+                              HorizontalAlignment="Left" AutoGenerateColumns="False" 
+                              CurrentCellChanged="WorkerDetailsTable_CurrentCellChanged" RowDetailsVisibilityMode="Collapsed"
                               SelectionChanged="WorkerDetailsTable_SelectionChanged" CanUserDeleteRows="True" CanUserAddRows="False">
                         <DataGrid.Columns>
                             <DataGridTemplateColumn>
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
                                         <Button x:Name="DeleteButton" Click="DeleteButton_Click" Width="30" Height="30" Padding="0" 
-                            Background="{x:Null}" BorderBrush="{x:Null}" Foreground="Gray">
+                                                Background="{x:Null}" BorderBrush="{x:Null}" Foreground="Gray">
                                             <materialDesign:PackIcon Kind="Trash"/>
+                                        </Button>
+                                    </DataTemplate>
+                                </DataGridTemplateColumn.CellTemplate>
+                            </DataGridTemplateColumn>
+                            <DataGridTemplateColumn>
+                                <DataGridTemplateColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <Button x:Name="DetailsButton" ButtonBase.Click="DetailsButton_Click" 
+                                                Background="{x:Null}" BorderBrush="{x:Null}" Foreground="Gray" 
+                                                Width="30" Height="30" Padding="0" >
+                                            <materialDesign:PackIcon Kind="ArrowDown"/>
                                         </Button>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
                             <DataGridTextColumn Binding="{Binding Id}" Header="Id" Width="150" />
                             <DataGridTextColumn Binding="{Binding FullName}" Header="Full Name" Width="150" />
-                            <DataGridTextColumn Binding="{Binding Email_address}" Header="Email address" Width="250"/>
+                            <DataGridTextColumn Binding="{Binding Email_address}" Header="Email address" Width="200"/>
                             <DataGridTemplateColumn Header="Image" IsReadOnly="True">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
@@ -104,11 +116,35 @@
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
-                            <DataGridTextColumn Binding="{Binding Image}" Visibility="Hidden" Header="Image" Width="150" IsReadOnly="True"/>
+                            <DataGridTextColumn Binding="{Binding Image}" Visibility="Hidden" Header="Image" Width="30" IsReadOnly="True"/>
                         </DataGrid.Columns>
+                        <DataGrid.RowDetailsTemplate>
+                            <DataTemplate>
+                                <DockPanel>
+                                    <Image Source="{Binding Path=Image}" Width="90"/>
+                                    <Grid Margin="20, 20">
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="Auto"/>
+                                            <ColumnDefinition Width="Auto"/>
+                                        </Grid.ColumnDefinitions>
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="Auto"/>
+                                            <RowDefinition Height="Auto"/>
+                                            <RowDefinition Height="Auto"/>
+                                        </Grid.RowDefinitions>
+                                        <TextBlock Text="Id: " FontWeight="Bold"/>
+                                        <TextBlock Text="{Binding Path=Id}" Grid.Column="1" Grid.Row="0"/>
+                                        <TextBlock Text="Full Name: " FontWeight="Bold" Grid.Row="1" Grid.Column="0"/>
+                                        <TextBlock Text="{Binding Path=FullName}" Grid.Column="1" Grid.Row="1"/>
+                                        <TextBlock Text="Email address: " FontWeight="Bold" Grid.Row="2" Grid.Column="0"/>
+                                        <TextBlock Text="{Binding Path=Email_address}" Grid.Column="1" Grid.Row="2"/>
+                                    </Grid>
+                                </DockPanel>
+                            </DataTemplate>
+                        </DataGrid.RowDetailsTemplate>
                     </DataGrid>
                 </ScrollViewer>
-                <StackPanel Orientation="Horizontal" Margin="0,350,0,0">
+                <StackPanel Orientation="Horizontal" Margin="0,385,0,0">
                     <TextBlock Text="{Binding Path=VM_CountWorkersInWorkersDetailsTableProperty, StringFormat='Total Workers: {0}'}"
                               Foreground="Gray" FontFamily="Champagne &amp; Limousines" FontSize="18" Height="30" FontWeight="Bold" />
                 </StackPanel>
