--- a/CovidKeeperFrontend/Views/ManageWorkersUserControl.xaml
+++ b/CovidKeeperFrontend/Views/ManageWorkersUserControl.xaml
@@ -12,10 +12,10 @@
         <materialDesign:DialogHost BorderBrush="{DynamicResource MaterialDesignDivider}">
             <materialDesign:DialogHost.DialogContent>
                 <Grid Width="400" Height="315" VerticalAlignment="Top" HorizontalAlignment="Center">
-                    
+
                     <StackPanel Orientation="Vertical">
                         <StackPanel Orientation="Horizontal" Margin="15">
-                            <materialDesign:PackIcon Kind="PeopleAdd" Foreground="{StaticResource PrimaryHueMidBrush}" Width="50" Height="50"/>        
+                            <materialDesign:PackIcon Kind="PeopleAdd" Foreground="{StaticResource PrimaryHueMidBrush}" Width="50" Height="50"/>
                         </StackPanel>
                         <StackPanel Orientation="Horizontal" Margin="15, 0, 0, 0">
                             <Label Content="ID:" Foreground="Gray" FontFamily="Champagne &amp; Limousines" FontSize="18" Height="30"/>
@@ -76,8 +76,8 @@
                 <ColumnDefinition Width="1*"/>
                 <ColumnDefinition Width="1*"/>
                 <ColumnDefinition Width="1*"/>
-            </Grid.ColumnDefinitions>            
-            
+            </Grid.ColumnDefinitions>
+
             <Grid Grid.Row="1" Grid.ColumnSpan="3">
                 <ScrollViewer Margin="0,0,0,30">
                     <DataGrid x:Name="WorkerDetailsTable" ItemsSource="{Binding Path=VM_WorkerDetailsTableProperty, Mode=OneWay}" 
@@ -124,7 +124,7 @@
                                     <Image Source="{Binding Path=Image}" Width="90"/>
                                     <Grid Margin="20, 20">
                                         <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="Auto"/>
+                                            <ColumnDefinition Width="100"/>
                                             <ColumnDefinition Width="Auto"/>
                                         </Grid.ColumnDefinitions>
                                         <Grid.RowDefinitions>
@@ -149,7 +149,7 @@
                               Foreground="Gray" FontFamily="Champagne &amp; Limousines" FontSize="18" Height="30" FontWeight="Bold" />
                 </StackPanel>
             </Grid>
-        </Grid>        
+        </Grid>
 
     </Grid>
 </UserControl>
